--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.3",
+    "@mui/lab": "^6.0.0-beta.12",
+    "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.3",
     "next": "14.2.15",
     "react": "^18",
