--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material-nextjs": "^6.1.3",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yet-another-react-lightbox": "^3.21.6"
   },
   "devDependencies": {
     "@types/node": "^20",
